# Jotterly

./: README.md  package-lock.json  package.json
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20230209185501_setup.down.sql  20230209185501_setup.up.sql
src-tauri/resources/: settings.json
src-tauri/resources/themes/: Breeze Dark.json  Breeze Light.json  Dark.json  Gnome Dark.json  Gnome Light.json  Gruvbox Dark.json  Gruvbox Light.json  Legacy.json  Light.json  theme copy 2.json  theme.json
src-tauri/src/: database.rs  lib.rs  main.rs  settings.rs  theme.rs
src-tauri/src/database/: bridge.rs  models.rs
src/lib/: Dropdown.svelte  EditJotPopup.svelte  EditTagsPopup.svelte  Greet.svelte  JotBar.svelte  JotView.svelte  SettingsPopup.svelte
src/routes/: +page.svelte
web/: WelcomePageLight
