[package]
name = "tauri-test"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["clipboard-read-text", "fs-all", "global-shortcut-all", "path-all", "shell-open", "system-tray", "window-all"] }
sqlx = { version = "0.6", features = [  "runtime-async-std-native-tls", "sqlite", "chrono" ] }
async-std = { version = "1", features = [ "attributes" ] }
dotenvy = "0.15"
chrono = "0.4.23"
fuzzy-matcher = "0.3.7"
sublime_fuzzy = "0.7.0"
dirs = "4.0.0"
open = "4.0.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
